hphp/hack/test/typecheck/reified_type_arg_check_on_like_type.php.exp
File "reified_type_arg_check_on_like_type.php", line 16, characters 3-11:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "reified_type_arg_check_on_like_type.php", line 7, characters 19-21:
  Definition is here
