hphp/hack/test/typecheck/reified_type_arg_check_on_like_type.php
<?hh


namespace mojpc2;

interface J {
  public function bar<reify T>(): void;
}

interface I {
  public function foo(): J;
}

function repro(I $i): void {
  $j = $i->foo();
  $j->bar(); // No error
}
